# vmir

./: .doozer.json  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  clean_build.bash  run_build_and_test.bash
docs/: wasm.md
examples/prebuilt/: sha1sum.wasm
examples/wasm/: wasm.mk
examples/wasm/hello_world/: Makefile  hello.c  world.c
examples/wasm/sha1sum/: Makefile  main.c  sha1.c  sha1.h
src/: bitcode.h  main.c  vmir.c  vmir.h  vmir_bitcode_instr.c  vmir_bitcode_parser.c  vmir_bitstream.c  vmir_function.c  vmir_instr.c  vmir_instr_parse.c  vmir_jit_arm.c  vmir_libc.c  vmir_mem.c  vmir_support.c  vmir_transform.c  vmir_type.c  vmir_value.c  vmir_vm.c  vmir_vm.h  vmir_wasm_parser.c
sysroot/usr/include/: alloca.h  ctype.h  dirent.h  errno.h  fcntl.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
sysroot/usr/include/sys/: stat.h  syslimits.h  types.h
test/: CMakeLists.txt  TestFunc.cmake  run_regress_test
test/cxx/: Makefile
test/cxx/src/: exceptions.cpp
test/external_functions/: test_external_functions.c  test_external_functions_script.cpp  test_external_functions_script.h
test/external_functions/test.xcodeproj/: project.pbxproj
test/gcc-torture/: CMakeLists.txt  Makefile  runtest
test/gcc-torture/src/: 961223-1.c  980608-1.c  loop-2c.c  restrict-1.c  unroll-1.c  va-arg-7.c  va-arg-8.c
test/misc/: CMakeLists.txt  Makefile
test/misc/src/: args.c  call.c  critical_edges.c  float.c  io.c  jumptable.c  lea.c  mem.c  printf.c  sha1test.c  sizes.c  switch.c  vaarg.c
test/regress/: CMakeLists.txt
test/regress/c-testsuite/: LICENSE
test/regress/c-testsuite/single-exec/: 00220.c
test/regress/stackl_test/: LICENSE.txt  test1.c  test10.c.disable  test2.c  test2.c.expected  test3.c  test3.c.expected  test4.c  test4.c.expected  test5.c  test5.c.expected  test6.c  test6.c.expected  test7.c.disable  test7.c.expected  test8.c  test8.c.expected  test9.c.disable  test9.c.expected
test/sysroot/usr/include/: ctype.h  math.h  stdio.h  stdlib.h  string.h
tlsf/: tlsf.c  tlsf.h
